[package]
name = "starcoin_tx_finder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.4"
hex = "0.4.3"
bcs = "0.1"
starcoin-types = { git = "https://github.com/starcoinorg/starcoin.git", package = "starcoin-types" }